--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"axios": "^0.21.1",
+		"babel-preset-env": "^1.7.0",
+		"@babel/preset-react": "^7.16.7",
 		"bcrypt": "^5.0.0",
 		"chalk": "^4.1.0",
 		"classnames": "^2.3.1",
@@ -33,9 +35,11 @@
 		"ejs": "^3.1.6",
 		"express": "^4.16.4",
 		"history": "^4.9.0",
+		"html-webpack-plugin": "^5.5.0",
 		"is-empty": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"jwt-decode": "^3.1.2",
+		"mdb-react-ui-kit": "^2.3.0",
 		"moment": "^2.29.1",
 		"mongoose": "^6.1.6",
 		"morgan": "^1.9.1",
@@ -47,7 +51,8 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.10",
-		"@babel/preset-react": "^7.12.10",
+		"@babel/preset-env": "^7.16.8",
+		"@babel/preset-react": "^7.16.7",
 		"@babel/register": "^7.12.10",
 		"axios": "^0.21.1",
 		"axios-mock-adapter": "^1.16.0",
@@ -69,7 +74,7 @@
 		"redux-mock-store": "^1.5.3",
 		"redux-thunk": "^2.3.0",
 		"supertest": "^4.0.2",
-		"webpack": "^5.15.0",
+		"webpack": "^5.66.0",
 		"webpack-cli": "^4.3.1"
 	}
 }
