--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
 	"author": "Fullstack Academy of Code",
 	"license": "MIT",
 	"dependencies": {
+		"@babel/preset-react": "^7.16.7",
+		"@material-ui/core": "^4.12.3",
+		"@material-ui/icons": "^4.11.2",
 		"axios": "^0.21.1",
 		"babel-preset-env": "^1.7.0",
-		"@babel/preset-react": "^7.16.7",
 		"bcrypt": "^5.0.0",
 		"chalk": "^4.1.0",
 		"classnames": "^2.3.1",
@@ -39,6 +41,7 @@
 		"is-empty": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"jwt-decode": "^3.1.2",
+		"material-table": "^1.69.3",
 		"mdb-react-ui-kit": "^2.3.0",
 		"moment": "^2.29.1",
 		"mongoose": "^6.1.6",
