--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"babel-preset-env": "^1.7.0",
 		"bcrypt": "^5.0.0",
 		"chalk": "^4.1.0",
+		"chart.js": "^3.7.0",
 		"classnames": "^2.3.1",
 		"compression": "^1.7.3",
 		"concurrently": "^7.0.0",
@@ -48,6 +49,7 @@
 		"morgan": "^1.9.1",
 		"pg": "^8.5.1",
 		"plaid": "^9.10.0",
+		"react-chartjs-2": "^4.0.1",
 		"react-plaid-link": "^3.2.1",
 		"reactstrap": "^9.0.1",
 		"sequelize": "^6.3.5"
