--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"axios": "^0.21.1",
 		"babel-preset-env": "^1.7.0",
 		"bcrypt": "^5.0.0",
+		"bootstrap": "^5.1.3",
+		"cdbreact": "^1.2.1",
 		"chalk": "^4.1.0",
 		"chart.js": "^3.7.0",
 		"classnames": "^2.3.1",
@@ -34,6 +36,7 @@
 		"concurrently": "^7.0.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"css-loader": "^6.5.1",
 		"dotenv": "^12.0.3",
 		"ejs": "^3.1.6",
 		"express": "^4.16.4",
@@ -49,11 +52,13 @@
 		"morgan": "^1.9.1",
 		"pg": "^8.5.1",
 		"plaid": "^9.10.0",
+		"react-bootstrap": "^2.1.1",
 		"react-chartjs-2": "^4.0.1",
 		"react-charts": "^3.0.0-beta.34",
 		"react-plaid-link": "^3.2.1",
 		"reactstrap": "^9.0.1",
-		"sequelize": "^6.3.5"
+		"sequelize": "^6.3.5",
+		"style-loader": "^3.3.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.10",
@@ -72,7 +77,7 @@
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-redux": "^7.0.1",
-		"react-router-dom": "^5.0.0",
+		"react-router-dom": "^5.3.0",
 		"react-test-renderer": "^16.4.2",
 		"redux": "^4.0.1",
 		"redux-devtools-extension": "^2.13.5",
