--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
 	"license": "MIT",
 	"dependencies": {
 		"@babel/preset-react": "^7.16.7",
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
 		"@material-ui/core": "^4.12.3",
 		"@material-ui/icons": "^4.11.2",
+		"@mui/icons-material": "^5.3.0",
+		"@mui/material": "^5.3.0",
 		"axios": "^0.21.1",
 		"babel-preset-env": "^1.7.0",
 		"bcrypt": "^5.0.0",
