--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
 		"react-charts": "^3.0.0-beta.34",
 		"react-plaid-link": "^3.2.1",
 		"reactstrap": "^9.0.1",
+		"semantic-ui-css": "^2.4.1",
+		"semantic-ui-react": "^2.0.4",
 		"sequelize": "^6.3.5",
 		"style-loader": "^3.3.1"
 	},
