--- a/package.json
+++ b/package.json
@@ -64,7 +64,20 @@
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^2.0.4",
 		"sequelize": "^6.3.5",
-		"style-loader": "^3.3.1"
+		"style-loader": "^3.3.1",
+		"web-vitals": "^2.1.4",
+		"workbox-background-sync": "^6.4.2",
+		"workbox-broadcast-update": "^6.4.2",
+		"workbox-cacheable-response": "^6.4.2",
+		"workbox-core": "^6.4.2",
+		"workbox-expiration": "^6.4.2",
+		"workbox-google-analytics": "^6.4.2",
+		"workbox-navigation-preload": "^6.4.2",
+		"workbox-precaching": "^6.4.2",
+		"workbox-range-requests": "^6.4.2",
+		"workbox-routing": "^6.4.2",
+		"workbox-strategies": "^6.4.2",
+		"workbox-streams": "^6.4.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.10",
@@ -93,5 +106,17 @@
 		"supertest": "^4.0.2",
 		"webpack": "^5.66.0",
 		"webpack-cli": "^4.3.1"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
