--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
 	"name": "cha-ching",
-	"version": "2.0.0",
+	"version": "1.0.0",
 	"description": "A financial planner",
 	"main": "index.js",
+	"engines": {
+		"node": "14.17.5",
+		"npm": "6.14"
+	},
 	"scripts": {
 		"build": "webpack",
 		"build:dev": "npm run build -- --watch --mode=development",
