--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"dotenv": "^12.0.3",
 		"ejs": "^3.1.6",
 		"express": "^4.16.4",
+		"express-fileupload": "^1.2.1",
 		"history": "^4.9.0",
 		"html-webpack-plugin": "^5.5.0",
 		"is-empty": "^1.2.0",
