--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"ejs": "^3.1.6",
 		"express": "^4.16.4",
 		"express-fileupload": "^1.2.1",
+		"focus-trap-react": "^8.9.1",
 		"history": "^4.9.0",
 		"html-webpack-plugin": "^5.5.0",
 		"is-empty": "^1.2.0",
@@ -65,11 +66,13 @@
 		"react-bootstrap": "^2.1.1",
 		"react-chartjs-2": "^4.0.1",
 		"react-charts": "^3.0.0-beta.34",
+		"react-date-picker": "^8.3.6",
 		"react-plaid-link": "^3.2.1",
 		"react-responsive-modal": "^6.2.0",
 		"reactstrap": "^9.0.1",
+		"redux-persist": "^6.0.0",
 		"semantic-ui-css": "^2.4.1",
-		"semantic-ui-react": "^2.0.4",
+		"semantic-ui-react": "^2.1.1",
 		"sequelize": "^6.3.5",
 		"style-loader": "^3.3.1",
 		"sweetalert2": "^11.3.6",
@@ -110,7 +113,7 @@
 		"redux-devtools-extension": "^2.13.5",
 		"redux-logger": "^3.0.6",
 		"redux-mock-store": "^1.5.3",
-		"redux-thunk": "^2.3.0",
+		"redux-thunk": "^2.4.1",
 		"supertest": "^4.0.2",
 		"webpack": "^5.66.0",
 		"webpack-cli": "^4.3.1"
